@@ -2603,7 +2603,7 @@ return|return
 name|ret
 return|;
 block|}
-comment|/**    * Write an operation to the edit log. Do not sync to persistent    * store yet.    */
+comment|/**    * Write an operation to the edit log.    *<p/>    * Additionally, this will sync the edit log if required by the underlying    * edit stream's automatic sync policy (e.g. when the buffer is full, or    * if a time interval has elapsed).    */
 DECL|method|logEdit (final FSEditLogOp op)
 name|void
 name|logEdit
@@ -2613,6 +2613,11 @@ name|FSEditLogOp
 name|op
 parameter_list|)
 block|{
+name|boolean
+name|needsSync
+init|=
+literal|false
+decl_stmt|;
 synchronized|synchronized
 init|(
 name|this
@@ -2675,24 +2680,32 @@ name|start
 argument_list|)
 expr_stmt|;
 comment|// check if it is time to schedule an automatic sync
-if|if
-condition|(
-operator|!
+name|needsSync
+operator|=
 name|shouldForceSync
 argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|needsSync
 condition|)
 block|{
-return|return;
-block|}
 name|isAutoSyncScheduled
 operator|=
 literal|true
 expr_stmt|;
 block|}
-comment|// sync buffered edit log entries to persistent store
+block|}
+comment|// Sync the log if an automatic sync is required.
+if|if
+condition|(
+name|needsSync
+condition|)
+block|{
 name|logSync
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 comment|/**    * Wait if an automatic sync is scheduled    */
 DECL|method|waitIfAutoSyncScheduled ()
@@ -5935,7 +5948,7 @@ name|fromTxId
 argument_list|)
 return|;
 block|}
-comment|/**    * Finalizes the current edit log and opens a new log segment.    * @return the transaction id of the BEGIN_LOG_SEGMENT transaction    * in the new log.    */
+comment|/**    * Finalizes the current edit log and opens a new log segment.    *    * @param layoutVersion The layout version of the new edit log segment.    * @return the transaction id of the BEGIN_LOG_SEGMENT transaction in the new    * log.    */
 DECL|method|rollEditLog (int layoutVersion)
 specifier|synchronized
 name|long
